<?xml version="1.0" encoding="utf-8"?>
<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/favorite_infoWindow"
        android:src="@drawable/ic_grade_black_48dp"
        android:title="@string/favorite_infoWindow"
        style="?android:attr/borderlessButtonStyle"
        android:adjustViewBounds="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/itineraire_infoWindow"
        android:src="@drawable/ic_directions_black_48dp"
        android:title="@string/directions_infoWindow"
        style="?android:attr/borderlessButtonStyle"
        android:adjustViewBounds="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/report_infowindow"
        android:src="@drawable/ic_report_problem_black_48dp"
        android:title="@string/report_infoWindow"
        style="?android:attr/borderlessButtonStyle"
        android:adjustViewBounds="true" />

</fragment>